# membership_card_protocol

./: .dockerignore  .gitignore  README.md  planning_SKILL_updated.md
.claude/: settings.local.json
app-sdk/: README.md  package.json  pnpm-lock.yaml
branding/: card_design_guide.md  color_palette.md  dnp_overview.md  pin_overview.md  technical_overview.md
card-validator/: package-lock.json  package.json  tsconfig.json  vitest.config.ts.timestamp-1779382514187-873dd2fd25d04.mjs
chitt-validator/: package-lock.json  vitest.config.ts.timestamp-1779382514187-873dd2fd25d04.mjs
client-sdk/: .gitignore  README.md  package.json  pnpm-lock.yaml
contracts/: .dockerignore  Cargo.toml  README.md
contracts/deployments/: README.md  sepolia.json
contracts/logic-contract/: Cargo.toml
contracts/logic-contract/src/: card_ops.rs  dns_ops.rs  governance_ops.rs  key_scheme_ops.rs  lib.rs  main.rs  subcard_ops.rs  upgrade_ops.rs  write_gate.rs
contracts/mock_wallets/: .gitignore
contracts/plans/: gas-costs.md  implementation-plan.md  strategic-plan.md
contracts/protocol-types/: Cargo.toml
contracts/protocol-types/src/: lib.rs
contracts/scripts/: Cargo.toml  build_governance_payload.rs  contract_helpers.sh  deploy.sh  encrypt_card.rs  gen_keypair.rs  gen_mldsa_keypair.rs  gen_test_vectors.rs  ipfs_helpers.sh  publish_cards.sh  read_dev_state.sh  redeploy_logic.sh  run_sepolia_tests.sh  setup_dev.sh  setup_dns.sh  sign_card_message.rs  sign_payload.rs  test_01_setup_root_node.sh  test_02_create_policy.sh  test_03_create_card.sh  test_04_sign_message.sh  test_05_sign_test_message.sh  test_dns.sh
contracts/storage-contract/: Cargo.toml
contracts/storage-contract/src/: lib.rs  main.rs
contracts/test_params/: card.json  policy.json  root_node.json
contracts/tests/: MANUAL_TESTING.md  foundry.toml
contracts/tests/cache/: solidity-files-cache.json  test-failures
contracts/tests/src/: CardOps.t.sol  DnsOps.t.sol  GovernanceOps.t.sol  Integration.t.sol  ProtocolVersion.t.sol  SepoliaIntegration.t.sol  StorageInvariants.t.sol  SubCardOps.t.sol  UpgradeOps.t.sol  Verifier.t.sol  smoke.t.sol
contracts/tests/src/mocks/: MockLogic.sol  MockStorage.sol  MockVerifier.sol
contracts/verifier-module/: Cargo.toml
contracts/verifier-module/src/: lib.rs  main.rs
governance/: README.md
integration_tests/: README.md  docker-compose.yml  stack-ready.sh
landing_page/: _config.yml
mark-validator/: package.json
membership_card_verifier/: package.json  pnpm-lock.yaml
plans/: Open Questions.md  app-card-chain-walk-implementation-plan.md  app-card-chain-walk-strategic-plan.md  contract-implementation-plan.md  contract-strategic-plan.md  dns-strategic-plan.md  g1-policy-match-reason-spec.md  g2-verifycard-chain-spec.md  g3-event-log-spec.md  g4-watcher-wiring-spec.md  governance-implementation-plan.md  implementation-plan.md  integration-testing-implementation-plan.md  integration-testing-strategic-plan.md  matrix-implementation-plan.md  membership_card_verifier_todo.md  open-questions-before-implementation.md  press-implementation-plan.md  press-strategic-plan.md  python-verifier-implementation-plan.md  relay-implementation-plan.md  relay-message-buffer-plan.md  relay-old-restoration-plan.md  relay-serverless-migration-implementation-plan.md  relay-serverless-migration-strategic-plan.md  relay-strategic-plan.md  sdk-split-implementation-plan.md  sdk-split-strategic-plan.md  strategic-plan.md  subcard-registry-implementation-plan.md  subcard-registry-strategic-plan.md  subcard_redteam_plan.md  submark_redteam_plan.md  todo-strategic-plan.md  verifier-criteria-and-chain-plan.md  verifier-implementation-plan.md  versioning-strategic-plan.md
policies/: subcard_creation_policy.md  submark_creation_policy.md
press/: .gitignore  OPERATOR.md  nitro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
raw_notes/: Annotating and updating Cards.md  Badge Architecture Overview.md  Card Auth.md  Card Creation.md  Message composition and verification.md  Naming Convention.md  Notary Systems.md  Project Context: Community Verification Badge Protocol.md  Recovery Flow.md  Third party attestations when card holders cause harm.md  Wallet System.md  matrix.md
red_teaming/: phase_1_report.md  phase_2_report.md  phase_3_report.md  summary.md
relay/: .env.example  .gitignore  Dockerfile  PROVISIONING.md  README.md  docker-compose.dev.yml  docker-compose.yml  nitro.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.workers.config.ts  wrangler.toml
relay-next/: .gitignore  PROVISIONING.md  README.md  nitro.config.ts  package-lock.json  package.json  tsconfig.json  vitest.workers.config.ts  wrangler.do-test.toml  wrangler.toml
relay-old/: .env.example  README.md
relay_serverless_old/: package-lock.json  package.json  tsconfig.json  wrangler.do-test.toml
sdk-providers-rn/: package.json  pnpm-lock.yaml
sdk-providers-web/: package.json  pnpm-lock.yaml
wallet-service/matrix-policy-module/: .gitignore  .gitkeep  README.md  pyproject.toml
wallet-service/matrix-policy-module/src/matrix_policy_module/: __init__.py  attestation.py  cache.py  chain_context.py  config.py  ipfs_provider.py  membership_registry.py  module.py  predicates.py  rpc_provider.py  watcher.py
wallet-service/matrix-policy-module/test/: test_attestation.py  test_cache.py  test_chain_context.py  test_ipfs_provider.py  test_membership_registry.py  test_module.py  test_module_api_force_part_client.py  test_module_policy_resolver.py  test_predicates.py  test_rpc_provider.py  test_rpc_provider_event_log.py  test_watcher.py
(+669 files in other folders)
