[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen_test_vectors"
path = "gen_test_vectors.rs"

[dependencies]
# P-256 (secp256r1) key generation and signing.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
# RFC 6979 deterministic k generation (already included via p256 ecdsa feature).
ecdsa = "0.16"
# SHA-256 for hashing (required by P-256 / ECDSA).
sha2 = "0.10"
# Hex encoding/decoding for output.
hex = "0.4"
# JSON output for test vectors.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Randomness for key generation.
rand_core = { version = "0.6", features = ["std"] }
