[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "gen_test_vectors"
path = "gen_test_vectors.rs"

[[bin]]
name = "sign_payload"
path = "sign_payload.rs"

[[bin]]
name = "build_governance_payload"
path = "build_governance_payload.rs"

[[bin]]
name = "gen_keypair"
path = "gen_keypair.rs"

[[bin]]
name = "sign_card_message"
path = "sign_card_message.rs"

[[bin]]
name = "gen_mldsa_keypair"
path = "gen_mldsa_keypair.rs"

[[bin]]
name = "encrypt_card"
path = "encrypt_card.rs"

[dependencies]
# P-256 (secp256r1) key generation, signing, and ECDH key agreement.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "ecdh"] }
# RFC 6979 deterministic k generation (already included via p256 ecdsa feature).
ecdsa = "0.16"
# SHA-256 for hashing.
sha2 = "0.10"
# Keccak-256 for payload hashing (contracts use keccak256, not sha256).
tiny-keccak = { version = "2.0", features = ["keccak"] }
# Base64 decoding/encoding.
base64 = "0.21"
# Hex encoding/decoding.
hex = "0.4"
# JSON.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Randomness.
rand_core = { version = "0.6", features = ["std"] }
# AES-256-GCM for ADR-006 card content encryption.
aes-gcm = "0.10"
# HKDF key derivation (ADR-006 uses SHA3-256).
hkdf = "0.12"
# SHA3-256 for ADR-006 content key: HKDF-SHA3-256(recipient_pubkey, info="card-content-v1").
sha3 = "0.10"
# ML-DSA-44 (FIPS 204) key generation for card holder identity keys.
# getrandom feature enables Generate::generate() so we don't need to bridge rand_core versions.
ml-dsa = { version = "0.1", features = ["getrandom"] }
